added code for data binding

--- a/app/views/HeaderView.html
+++ b/app/views/HeaderView.html
@@ -14,25 +14,27 @@
     <li class="dropdown">
         <a data-toggle="dropdown" class="dropdown-toggle">data binding<b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <li><a href="#">digest cycle</a></li>
+            <li><a href="#/digestCycle">digest cycle</a></li>
             <li class="divider"></li>
-            <li><a href="#">$inector</a></li>
+            <li><a href="#/$injector">$injector</a></li>
             <li class="divider"></li>
-            <li><a href="#">$compile</a></li>
+            <li><a href="#/$compile">$compile</a></li>
             <li class="divider"></li>
-            <li><a href="#">$apply</a></li>
+            <li><a href="#/$apply">$apply</a></li>
             <li class="divider"></li>
-            <li><a href="#">$watch</a></li>
+            <li><a href="#/$watch">$watch</a></li>
             <li class="divider"></li>
-            <li><a href="#">dirty checking</a></li>
+            <li><a href="#/dirtyChecking">dirty checking</a></li>
         </ul>
     </li>
     <li class="dropdown">
         <a data-toggle="dropdown" class="dropdown-toggle">ng-controller<b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <li><a href="#">nested controllers</a></li>
+            <li><a href="#/simpleController">simple controllers</a></li>
             <li class="divider"></li>
-            <li><a href="#">scope inheritance</a></li>
+            <li><a href="#/nestedController">nested controllers</a></li>
+            <li class="divider"></li>
+            <li><a href="#/scopeInheritance">scope inheritance</a></li>
         </ul>
     </li>
     <li class="dropdown">
