--- a/app/views/SpecialPropertiesView.html
+++ b/app/views/SpecialPropertiesView.html
@@ -1,14 +1,13 @@
 <div ng-init="names=['A','B','C','D','E']">
+    <p>Sequence from left to right - </p>
     <ul>
-
-
-            value
-            index
-            first
-            middle
-            last
-            even
-            odd
+        value
+        $index
+        $first
+        $middle
+        $last
+        $even
+        $odd
 
         <li ng-repeat="x in names">
             {{ x }}
