Aded code for angularjs filter

--- a/app/views/HeaderView.html
+++ b/app/views/HeaderView.html
@@ -49,5 +49,11 @@
             <li><a href="#/specialProperties">Special Properties of ng-repeat</a></li>
         </ul>
     </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" class="dropdown-toggle">Filter<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a ng-href="#/filter">filter</a></li>
+        </ul>
+    </li>
 </ul>
 <h3 class="text-muted">Angular Learning Demo</h3>
