Added unit test cases

--- a/app/views/FilterView.html
+++ b/app/views/FilterView.html
@@ -1,12 +1,11 @@
 <div>
-    <h2>
+    <h3>
         <b>
             Filter
         </b>
-    </h2>
-    <h5>
-        Selects a subset of items from array and returns it as a new array.
-    </h5>
+
+        selects a subset of items from array and returns it as a new array.
+    </h3>
 
 </div>
 <div ng-init="friends = [{name:'John', phone:'555-1276'},
