--- a/app/views/HeaderView.html
+++ b/app/views/HeaderView.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-pills pull-right pointer">
-    <li class="dropdown active">
+    <li class="dropdown">
         <a data-toggle="dropdown" class="dropdown-toggle">ng-scope<b class="caret"></b></a>
         <ul class="dropdown-menu">
             <li><a ng-href="#/scope">$scope</a></li>
@@ -50,7 +50,7 @@
         </ul>
     </li>
     <li class="dropdown">
-        <a data-toggle="dropdown" class="dropdown-toggle">Filter<b class="caret"></b></a>
+        <a data-toggle="dropdown" class="dropdown-toggle">filter<b class="caret"></b></a>
         <ul class="dropdown-menu">
             <li><a ng-href="#/filter">filter</a></li>
         </ul>
